--- a/trunk/MP-TVSeries/Resources/Languages/lt.xml
+++ b/trunk/MP-TVSeries/Resources/Languages/lt.xml
@@ -249,9 +249,10 @@
   <string name="UnableToDeleteFile" Original="Unable to Delete File: {0}">Nepavyko ištrinti failo: {0}</string>
   <string name="PlaySomething" Original="Play...">Groti...</string>
   <string name="PlayError" Original="Play error">Grojimo klaida</string>
-  <string name="RandomEpisode" Original="random episode">atsitiktinis epizodas</string>
-  <string name="FirstUnwatchedEpisode" Original="first unwatched episode">pirmas nežiūrėtas epizodas</string>
-  <string name="RandomUnwatchedEpisode" Original="random unwatched episode">atsitiktinis nežiūrėtas epizodas</string>
+  <string name="RandomEpisode" Original="Random episode">Atsitiktinis epizodas</string>
+  <string name="FirstUnwatchedEpisode" Original="First unwatched episode">Pirmas nežiūrėtas epizodas</string>
+  <string name="FirstUnwatchedEpisodeOtherwiseRandom" Original="First unwatched episode otherwise random">Pirma nežiūrėtas epizodas, kitu atveju atstitiktinis</string>
+  <string name="RandomUnwatchedEpisode" Original="Random unwatched episode">Atsitiktinis nežiūrėtas epizodas</string>
   <string name="LatestEpisode" Original="latest episode">vėliausias epizodas</string>
   <string name="UnableToFindAny" Original="Unable to find any {0}">Nepavyko rasti nei vieno {0}</string>
   <string name="UnableToFindAnyEpisode" Original="Unable to find any episode">Nepavyko rasti nei vieno epizodo</string>
