--- a/MP-TVSeries/Resources/Languages/de.xml
+++ b/MP-TVSeries/Resources/Languages/de.xml
@@ -40,6 +40,7 @@
   <string name="wrongSkin" Original="Wrong Skin file">Falsche Skin-Datei!</string>
   <string name="special" Original="Special">Special</string>
   <string name="specials" Original="Specials">Specials</string>
+  <string name="delPhyiscalWarning" Original="You are about to permanently delete {0} physical file(s).Would you like to proceed?">Du bist dabei {0} Datei(en) von der Festplatte zu löschen.\nMöchtest du wirklich fortfahren?</string>
   <string name="Force_Online_Match" Original="Force New Online Lookup For Series">Onlineabgleich erzwingen</string>
   <string name="Load_via_NewsLeecher" Original="Load via NewsLeecher">Über NewsLeecher laden</string>
   <string name="Download" Original="Download">Download</string>
@@ -287,6 +288,7 @@
   <string name="Shouts" Original="Shouts">Shouts</string>
   <string name="MainMenu" Original="Main Menu">Hauptmenü</string>
   <string name="AddToWatchList" Original="Add {0} to Watchlist">Füge {0} zur Beobachtungsliste hinzu</string>
+  <string name="TraktNotLoggedIn" Original="You can not do this operation without being\nlogged in. Would you like to Signup or Login\nto trakt.tv now?">Für diesen Bereich musst du angemeldet sein.\nWillst du dich jetzt bei trakt.tv\nregistrieren oder anmelden?</string>
   <string name="RelatedSeries" Original="RelatedSeries">Ähnliche Serien</string>
   <string name="SearchTorrent" Original="Torrent Search">Torrent-Suche</string>
   <string name="SearchNZB" Original="NZB Search">NZB-Suche</string>
