--- a/MP-TVSeries/Configuration/GUIConfiguration.resx
+++ b/MP-TVSeries/Configuration/GUIConfiguration.resx
@@ -134,7 +134,7 @@
         AAEAAAD/////AQAAAAAAAAAMAgAAAFdTeXN0ZW0uV2luZG93cy5Gb3JtcywgVmVyc2lvbj00LjAuMC4w
         LCBDdWx0dXJlPW5ldXRyYWwsIFB1YmxpY0tleVRva2VuPWI3N2E1YzU2MTkzNGUwODkFAQAAACZTeXN0
         ZW0uV2luZG93cy5Gb3Jtcy5JbWFnZUxpc3RTdHJlYW1lcgEAAAAERGF0YQcCAgAAAAkDAAAADwMAAAA6
-        eQAAAk1TRnQBSQFMAgEBDAEAAaQBBQGkAQUBGAEAARgBAAT/ASEBAAj/AUIBTQE2BwABNgMAASgDAAFg
+        eQAAAk1TRnQBSQFMAgEBDAEAAfwBBQH8AQUBGAEAARgBAAT/ASEBAAj/AUIBTQE2BwABNgMAASgDAAFg
         AwABYAMAAQEBAAEgBgABkP8A/wD/AP8A/wD/AP8A/wD/AP8A/wD/AP8A/wD/AP8A/wD/AP8A/wD/AP8A
         /wD/AP8A/wD/AP8A/wD/AP8A/wD/AP8A/wD/AFUAAQEDBAEGAwsBDwMSBBkBIwMdASkDHgErAx0BKQMY
         ASEDEQEXAwoBDgMEAQUDAAEBLwAEAQECAwMEBAEFAwQBBQMDAQQDAgEDAwIBAwMBAQIDAQECAwABAQMA
@@ -814,6 +814,44 @@ You can right click on this textbox to bring up a menu of available fields from 
 
 Default: &lt;Series.Pretty_Name&gt; e.g. The 4400</value>
   </data>
+  <data name="label70.Text" xml:space="preserve">
+    <value>Parsing Expressions are used by the plugins parsing engine to retrieve a Series Name, Season Number and Episode Number from a Folder Structure / Filename in your Import Paths. 
+This information is required to successfully match up with episodes in the online database.
+
+If an expression can not evaluate these items, the next expression in the list is used.
+</value>
+  </data>
+  <data name="button_MoveExpUp.Image" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
+    <value>
+        iVBORw0KGgoAAAANSUhEUgAAACAAAAAgCAYAAABzenr0AAAABGdBTUEAALGPC/xhBQAAACBjSFJNAAB6
+        JgAAgIQAAPoAAACA6AAAdTAAAOpgAAA6mAAAF3CculE8AAAACXBIWXMAAAryAAAK8gE9UvcRAAABC0lE
+        QVRYR+3UMWoCURSFYSshIGQBgVSCVXYgZAEBl5EqkB0ILsPKHWQfgm02kSqtIEzOG7xyZvI/x+razIGP
+        wcNw7wMfM2ma5q6wzIRlJiwzYZkJS3dD3s/PamhuwNINZCPlpc/2VyU0N2DprmQl5YXiJK+CobkBS1fJ
+        Qn4lDlD8yLP8C80NWDrIo3yLLw8HeZBOaG7A0kG+xJf27aQTmhuwdL2sxZfVfMglNDdg6SxvUi6bL6o5
+        ylLa0NyApTtnLv1LN6RcyifBuQFLp8ykdumG7GVKcwOWDlL+Cl/S9yKd0NyApYOMBxgPMB5gPMDdD1AW
+        bK9ov/8emhuwzIRlJiwzYZkJy0xY5mkmfzsOY4DZydpyAAAAAElFTkSuQmCC
+</value>
+  </data>
+  <data name="button_MoveExpDown.Image" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
+    <value>
+        iVBORw0KGgoAAAANSUhEUgAAACAAAAAgCAYAAABzenr0AAAABGdBTUEAALGPC/xhBQAAACBjSFJNAAB6
+        JgAAgIQAAPoAAACA6AAAdTAAAOpgAAA6mAAAF3CculE8AAAACXBIWXMAAAryAAAK8gE9UvcRAAABCUlE
+        QVRYR+3VMWoCURjEcauAIOQAglXAKjcQPIDgMawEbyB4jFS5Qe4hpPUSqdIGAuu8xS/Mbv5PQ4rPZgd+
+        iKPMe8iCo6Zp7grLTFhmwjITlpmwDJBnebliKp3QrsMyQFZSPqgpF+yEdh2WATJcYLjAcIHhAukXmMip
+        7PzDUR5o12EZLnmST/HxWz6k/V+gXYdlsJSf/lv8kJovWUgb2nVYhl724gfVbOUntOuwDJA38cP6XqUT
+        2nVYBsij1B7KdxlLJ7TrsAyVzKX/UJaHbia/QrsOy3Ala4nDy8O5FAztOizDjRykfGnXvquEdh2W4Q/Z
+        XF6roV2HZSYsM2GZCctMWGbCMk8zOgOx+mOAlkSO8gAAAABJRU5ErkJggg==
+</value>
+  </data>
+  <data name="label68.Text" xml:space="preserve">
+    <value>Check the table below if the plugin was able to parse all of the episodes located in your Import Paths  defined above. Episodes not parsed correctly will be highlighted. If renaming your files does not help, you can modify the plugins parser behaviour from the left hand side tree view.</value>
+  </data>
+  <data name="label69.Text" xml:space="preserve">
+    <value>String Replacements can be used to remove common string patterns that may confuse the plugins parsing engine.  It can also be helpful in replacing strange episode names that may not get automatically 
+matched e.g: replace 'ttscc' with 'Terminator the Sarah Connor Chronicles'.
+
+Be sure to enable 'run before matching' for this to work before it reaches the parsing engine.</value>
+  </data>
   <data name="dbCheckBoxTraktCommunityRatings.ToolTip" xml:space="preserve">
     <value>Ratings from trakt.tv are much better for tv shows and episodes than thetvdb.com.
 
@@ -850,46 +888,6 @@ If Trakt plugin is installed and TVSeries plugin is enabled for sync, it's recom
 
 Note: if you are using the Trakt plugin, it's recommended you enable rate dialog after watched from there. This setting can be used to send
 ratings to both thetvdb.com and trakt or just thetvdb.com.</value>
-  </data>
-  <data name="label70.Text" xml:space="preserve">
-    <value>Parsing Expressions are used by the plugins parsing engine to retrieve a Series Name, Season Number and 
-Episode Number from a Folder Structure / Filename in your Import Paths. This information is required to 
-successfully match up with episodes in the online database.
-
-If an expression can not evaluate these items, the next expression in the list is used.
-</value>
-  </data>
-  <data name="button_MoveExpUp.Image" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
-    <value>
-        iVBORw0KGgoAAAANSUhEUgAAACAAAAAgCAYAAABzenr0AAAABGdBTUEAALGPC/xhBQAAACBjSFJNAAB6
-        JgAAgIQAAPoAAACA6AAAdTAAAOpgAAA6mAAAF3CculE8AAAACXBIWXMAAAryAAAK8gE9UvcRAAABC0lE
-        QVRYR+3UMWoCURSFYSshIGQBgVSCVXYgZAEBl5EqkB0ILsPKHWQfgm02kSqtIEzOG7xyZvI/x+razIGP
-        wcNw7wMfM2ma5q6wzIRlJiwzYZkJS3dD3s/PamhuwNINZCPlpc/2VyU0N2DprmQl5YXiJK+CobkBS1fJ
-        Qn4lDlD8yLP8C80NWDrIo3yLLw8HeZBOaG7A0kG+xJf27aQTmhuwdL2sxZfVfMglNDdg6SxvUi6bL6o5
-        ylLa0NyApTtnLv1LN6RcyifBuQFLp8ykdumG7GVKcwOWDlL+Cl/S9yKd0NyApYOMBxgPMB5gPMDdD1AW
-        bK9ov/8emhuwzIRlJiwzYZkJy0xY5mkmfzsOY4DZydpyAAAAAElFTkSuQmCC
-</value>
-  </data>
-  <data name="button_MoveExpDown.Image" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
-    <value>
-        iVBORw0KGgoAAAANSUhEUgAAACAAAAAgCAYAAABzenr0AAAABGdBTUEAALGPC/xhBQAAACBjSFJNAAB6
-        JgAAgIQAAPoAAACA6AAAdTAAAOpgAAA6mAAAF3CculE8AAAACXBIWXMAAAryAAAK8gE9UvcRAAABCUlE
-        QVRYR+3VMWoCURjEcauAIOQAglXAKjcQPIDgMawEbyB4jFS5Qe4hpPUSqdIGAuu8xS/Mbv5PQ4rPZgd+
-        iKPMe8iCo6Zp7grLTFhmwjITlpmwDJBnebliKp3QrsMyQFZSPqgpF+yEdh2WATJcYLjAcIHhAukXmMip
-        7PzDUR5o12EZLnmST/HxWz6k/V+gXYdlsJSf/lv8kJovWUgb2nVYhl724gfVbOUntOuwDJA38cP6XqUT
-        2nVYBsij1B7KdxlLJ7TrsAyVzKX/UJaHbia/QrsOy3Ala4nDy8O5FAztOizDjRykfGnXvquEdh2W4Q/Z
-        XF6roV2HZSYsM2GZCctMWGbCMk8zOgOx+mOAlkSO8gAAAABJRU5ErkJggg==
-</value>
-  </data>
-  <data name="label69.Text" xml:space="preserve">
-    <value>String Replacements can be used to remove common string patterns that may confuse the plugins parsing engine. 
-It can also be helpful in replacing strange episode names that may not get automatically matched e.g:
-replace 'ttscc' with 'Terminator the Sarah Connor Chronicles'
-
-Be sure to enable 'run before matching' for this to work before it reaches the parsing engine.</value>
-  </data>
-  <data name="label68.Text" xml:space="preserve">
-    <value>Check the table below if the plugin was able to parse all of the episodes located in your Import Paths  defined above. Episodes not parsed correctly will be highlighted. If renaming your files does not help, you can modify the plugins parser behaviour from the left hand side tree view.</value>
   </data>
   <metadata name="$this.TrayHeight" type="System.Int32, mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089">
     <value>39</value>
