--- a/MP-TVSeries/Resources/Languages/en-US.xml
+++ b/MP-TVSeries/Resources/Languages/en-US.xml
@@ -5,6 +5,7 @@
   <string name="ChooseArtwork" Original="Choose Artwork">Choose Artwork</string>
   <string name="ArtworkTypes" Original="Artwork Types">Artwork Types</string>
   <string name="ArtworkSelected" Original="Selected">Selected</string>
+  <string name="ArtworkDownloading" Original="Download Progress {0}%">Download Progress {0}%</string>
   <string name="SeriesWideBanner" Original="Series WideBanner">Series WideBanner</string>
   <string name="SeriesPoster" Original="Series Poster">Series Poster</string>
   <string name="SeriesFanart" Original="Series Fanart">Series Fanart</string>
