--- a/MP-TVSeries/Resources/Languages/fr.xml
+++ b/MP-TVSeries/Resources/Languages/fr.xml
@@ -1,8 +1,18 @@
 <?xml version='1.0' encoding='UTF-8'?>
 <resources>
+  <string name="Artwork" Original="Artwork">Ouvrages d\'art</string>
+  <string name="ArtworkChooser" Original="Artwork Chooser">Sélecteur d\'oeuvres d\'art</string>
+  <string name="ChooseArtwork" Original="Choose Artwork">Choisir oeuvre d\'art</string>
+  <string name="ArtworkTypes" Original="Artwork Types">Types d\'oeuvres d\'art</string>
+  <string name="ArtworkSelected" Original="Selected">Selectionné</string>
+  <string name="ArtworkDownloading" Original="Download Progress {0}%">Progression du téléchargement {0}%</string>
+  <string name="SeriesWideBanner" Original="Series WideBanner">Bannière large de séries</string>
+  <string name="SeriesPoster" Original="Series Poster">Affiche de séries</string>
+  <string name="SeriesFanart" Original="Series Fanart">Fanart de séries</string>
+  <string name="SeasonPoster" Original="Season Poster">Affiche de saison</string>
+  <string name="EpisodeThumb" Original="Episode Thumbnail">Vignette d\'épisode</string>  
   <string name="Series" Original="Series">Séries</string>
-  <string name="Series_Plural" Original="Series (Plr)">Séries</string>
-  <!--plural-->
+  <string name="Series_Plural" Original="Series">Séries</string>
   <string name="Season" Original="Season">Saison</string>
   <string name="Seasons" Original="Seasons">Saisons</string>
   <string name="Episode" Original="Episode">Episode</string>
@@ -278,7 +288,9 @@
   <string name="SummaryNotAvailable" Original="No summary is currently available.">Aucun résumé n\'est actuellement disponible.</string>
   <string name="Timeout" Original="Timeout">Temps expiré</string>
   <string name="NoActors" Original="There are no Actors for this series.">Il n\'existe aucune info concernant les acteurs pour cette série.</string>
+  <string name="NoArtwork" Original="There are no {0} thumbnails for this series.">Il n\'y a pas {0} de vignettes pour ces séries.</string>
   <string name="GettingActors" Original="Getting Actors from Online">Rechercher des infos concernant les acteurs via le Web</string>
+  <string name="GettingArtwork" Original="Getting Artwork from Online">Récupération d\'oeuvre d'art en ligne</string>
   <string name="ShowAllEpisodes" Original="Show all Episodes">Afficher les épisodes non visionnés et à venir</string>
   <string name="DownloadAllEpisodeInfo" Original="Download All Episode Info">Télécharger toutes les infos concernant l\'épisode</string>
   <string name="Calendar" Original="Calendar">Calendrier</string>
